--- a/AngularJS/AngularJS.csproj
+++ b/AngularJS/AngularJS.csproj
@@ -916,9 +916,11 @@
     <None Include="scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="scripts\jquery-1.9.1.js" />
     <Content Include="scripts\jquery-1.9.1.min.js" />
+    <Content Include="service\deptService.js" />
     <Content Include="service\service.js" />
     <Content Include="views\addDepartment.html" />
     <Content Include="views\admin.html" />
+    <Content Include="views\allEditDepartments.html" />
     <Content Include="views\allUsers.html" />
     <Content Include="views\createUser.html" />
     <Content Include="views\editUser.html" />
